# composure

./: .gitignore  CHANGELOG.md  README.md  meson.build
data/: composure.in  io.github.composure.desktop
scripts/: composure  composure-capture.py  composure-capture.sh  composure-indicator.py  install.sh  setup-shortcuts.sh
src/: __init__.py  config.py  main.py  window.py
src/capture/: __init__.py  manager.py  portal.py
src/composer/: __init__.py  balance.py  detector.py  pipeline.py  renderer.py
src/models/: __init__.py  composition.py  preset.py
src/widgets/: __init__.py  background_picker.py  canvas.py  controls.py  preferences.py  ratio_picker.py
